[package]
name = "walle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.41.0"
csv = "1.1.6"
sprs = "0.11.0"

[dependencies.carina]
git = "https://github.com/parazodiac/Carina"
branch = "main"